✔️ Heart Rain done ...

--- a/HeartRain/style.css
+++ b/HeartRain/style.css
@@ -1,11 +1,11 @@
-* {
+body {
     box-sizing: border-box;
 }
 .heart {
     position: fixed;
     top: -1vh;
     transform: translateY(0);
-animation: fall 3s linear forwards;
+    animation: fall 3s linear forwards;
 }
 @keyframes fall {
     to {
