--- a/ToastNotification/style.css
+++ b/ToastNotification/style.css
@@ -1,29 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Galdeano&display=swap');
-
+body {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
 #wrapper {
     /* height: 500px; */
     display: grid;
     place-items: center;
     font-family: 'Galdeano', sans-serif;
     position: fixed;
-    bottom: 10px;
+    top: 10px;
     right: 10px;
 }
 #btnToast {
     color: white;
-    background-color: rgb(6, 129, 201);
+    background-color: rebeccapurple;
     font-family: 'Galdeano', sans-serif;
     font-size: 20px;
     height: 100px;
     width: 300px;
-    border: 1px solid rgb(65, 54, 54);
-    border-radius: 20px;
+    border: none;
+    border-radius: 50px;
     outline: none;
-    padding: 1.5rem;
+    padding: 1rem;
 }
 .toast {
     background-color: rebeccapurple;
     color: #fff;
+    width: 200px;
+    text-align: center;
     padding: 1rem;
     border-radius: 25px;
     margin: 0.5rem;
