:heavy_check_mark:  fixed some styling

--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Galdeano&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Texturina&display=swap');
 
 body {
-    background-color: rebeccapurple;
+    background-image: radial-gradient( circle farthest-corner at 50.3% 44.5%,  rgba(116,147,179,1) 0%, rgba(62,83,104,1) 100.2% );
+    box-sizing: border-box;
+    font-family: 'Texturina', serif;
 }
 #wrapper {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    font-family: 'Galdeano', sans-serif;
-    font-size: 25px;
+    font-family: 'Texturina', serif;
+    font-size: 20px;
     color: white;
 }
 #wrapper > div {
@@ -20,4 +23,24 @@ body {
     margin: 10px;
     padding: 20px;
     text-align: center;
+    position: relative;
+}
+img {
+    margin-bottom: 30px;
+}
+#techStack {
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    right: 0;
+}
+button {
+    font-family: 'Texturina', serif;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    background-image: radial-gradient( circle farthest-corner at -4% -12.9%,  rgba(74,98,110,1) 0.3%, rgba(30,33,48,1) 90.2% );
+    color: white;
+    width: 100px;
+    height: 30px;
 }
