--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ button {
     width: 100px;
     height: 30px;
 }
+footer {
+    text-align: center;
+    color: #f1f1f1;
+}
 a {
     text-decoration: none;
 }
