--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ button {
     width: 100px;
     height: 30px;
 }
+h1{
+    text-align: center;
+    color: #f1f1f1;
+    font-size: 36px;
+}
 footer {
     text-align: center;
     color: #f1f1f1;
