background-color changed

--- a/AutoWriteText/style.css
+++ b/AutoWriteText/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Galdeano&display=swap');
 
 body {
-    background-color: rebeccapurple;
+    background-color: rgb(0,102,102);
 }
 #wrapper {
     height: 500px;
